cabal-version: >=1.8

Name: ldap-client
Version: 0.6.10
License: BSD3
Maintainer: Matt Gambogi
Author: John Goerzen
      , Edward Z. Yang
      , Matt Gambogi
Stability: Beta
Copyright: Copyright (c) 2005-2015 John Goerzen, Edward Z. Yang, Matt Gambogi
homepage: https://github.com/gambogi/ldap-client
Category: Network
Synopsis: Haskell binding for C LDAP API
Description: This package provides LDAP interface code for Haskell programs,
             binding to the C LDAP API.
license-file: COPYRIGHT
extra-source-files: COPYING

Build-Type: Simple

Flag buildtests
  description: Build the executable to run unit tests
  default: False

Library
  -- C-Sources: glue/glue.c
  Exposed-Modules: Network.LDAP
                 , Network.LDAP.Types
                 , Network.LDAP.Init
                 , Network.LDAP.Constants
                 , Network.LDAP.Data
                 , Network.LDAP.Exceptions
                 , Network.LDAP.Search
                 , Network.LDAP.Modify
  Other-Modules: Network.LDAP.Utils
               , Network.LDAP.TypesLL
               , Network.LDAP.Result
  build-depends: base >= 4 && <5

  Extra-Libraries: ldap, lber


  GHC-Options: -O2
  -- CC-Options: -Iglue
  if os(openbsd)
    CC-Options: -DLDAP_X_PROXY_AUTHZ_FAILURE=LDAP_PROXY_AUTHZ_FAILURE
  else
    CC-Options: -DLDAP_DEPRECATED=1
  Extensions: ForeignFunctionInterface, TypeSynonymInstances,
              EmptyDataDecls, ScopedTypeVariables, CPP

Test-Suite test-ldap
  type: exitcode-stdio-1.0
  main-is: runtests.hs
  Extra-Libraries: ldap, lber
  build-depends: base >= 4 && < 5,
                 ldap-client,
                 HUnit
  if os(openbsd)
    CC-Options: -DLDAP_X_PROXY_AUTHZ_FAILURE=LDAP_PROXY_AUTHZ_FAILURE
  else
    CC-Options: -DLDAP_DEPRECATED=1
  GHC-Options: -O2
  Extensions: ForeignFunctionInterface, TypeSynonymInstances,
              EmptyDataDecls, ScopedTypeVariables, CPP
  hs-source-dirs: testsrc, .

Executable runtests
  if flag(buildtests)
    Buildable: True
  else
    Buildable: False
  Main-Is: runtests.hs
  if os(openbsd)
    CC-Options: -DLDAP_X_PROXY_AUTHZ_FAILURE=LDAP_PROXY_AUTHZ_FAILURE
  else
    CC-Options: -DLDAP_DEPRECATED=1
  Extensions: ForeignFunctionInterface, TypeSynonymInstances,
              EmptyDataDecls, ScopedTypeVariables, CPP
  Hs-Source-Dirs: testsrc, .
  GHC-Options: -O2

  build-depends: base >= 4 && < 5
